--- a/webGLM5/index.html
+++ b/webGLM5/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webGLM5.loader.js";
+      var loaderUrl = buildUrl + "/WebGL2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webGLM5.data",
-        frameworkUrl: buildUrl + "/webGLM5.framework.js",
-        codeUrl: buildUrl + "/webGLM5.wasm",
+        dataUrl: buildUrl + "/WebGL2.data",
+        frameworkUrl: buildUrl + "/WebGL2.framework.js",
+        codeUrl: buildUrl + "/WebGL2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "23-08-sabado",
